# python-intermediate-inflammation

./: .gitignore  .pylintrc  inflammation-analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: inflammation-01.json
inflammation/: compute_data.py  csv_data_source.py  models.py  shapes.py
tests/: test_compute_data.py  test_models.py
